Reran ML notebooks with SQL connection and added images for s_C

--- a/DB_connection.ipynb
+++ b/DB_connection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "90915442",
    "metadata": {},
    "outputs": [
@@ -27,173 +27,175 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>ID</th>\n",
-       "      <th>Block</th>\n",
-       "      <th>IUCR</th>\n",
-       "      <th>Primary Type</th>\n",
-       "      <th>Violence Status</th>\n",
+       "      <th>Primary_Type</th>\n",
+       "      <th>Violence_Status</th>\n",
        "      <th>Description</th>\n",
-       "      <th>Location Description</th>\n",
+       "      <th>Location_Description</th>\n",
        "      <th>Arrest</th>\n",
-       "      <th>Domestic</th>\n",
-       "      <th>District</th>\n",
-       "      <th>Ward</th>\n",
-       "      <th>Community Area</th>\n",
-       "      <th>FBI Code</th>\n",
-       "      <th>Year</th>\n",
+       "      <th>Community_Area</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Date</th>\n",
        "      <th>Time</th>\n",
+       "      <th>Average_Wind_Speed</th>\n",
+       "      <th>Average_Temperature</th>\n",
+       "      <th>Fog_Ice_Freezing_Fog</th>\n",
+       "      <th>Thunder</th>\n",
+       "      <th>Smoke_or_Haze</th>\n",
+       "      <th>Community_Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6909903</td>\n",
-       "      <td>12260346</td>\n",
-       "      <td>070XX S EGGLESTON AVE</td>\n",
-       "      <td>0486</td>\n",
-       "      <td>BATTERY</td>\n",
-       "      <td>VIOLENT</td>\n",
-       "      <td>DOMESTIC BATTERY SIMPLE</td>\n",
-       "      <td>APARTMENT</td>\n",
+       "      <td>11555945</td>\n",
+       "      <td>MOTOR VEHICLE THEFT</td>\n",
+       "      <td>NON-VIOLENT</td>\n",
+       "      <td>AUTOMOBILE</td>\n",
+       "      <td>STREET</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>08B</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>41.766435</td>\n",
-       "      <td>-87.635964</td>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>13:23:00</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>41.795512</td>\n",
+       "      <td>-87.651271</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>15:20:00</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6927701</td>\n",
-       "      <td>12263464</td>\n",
-       "      <td>080XX S YALE AVE</td>\n",
-       "      <td>0820</td>\n",
-       "      <td>THEFT</td>\n",
+       "      <td>11556016</td>\n",
+       "      <td>DECEPTIVE PRACTICE</td>\n",
        "      <td>NON-VIOLENT</td>\n",
-       "      <td>$500 AND UNDER</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
+       "      <td>FINANCIAL IDENTITY THEFT OVER $ 300</td>\n",
+       "      <td>VEHICLE - OTHER RIDE SHARE SERVICE (E.G., UBER...</td>\n",
        "      <td>False</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>06</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>41.748474</td>\n",
-       "      <td>-87.630607</td>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>06:59:00</td>\n",
+       "      <td>41.942727</td>\n",
+       "      <td>-87.640166</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lake View</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6927790</td>\n",
-       "      <td>12259990</td>\n",
-       "      <td>056XX W WASHINGTON BLVD</td>\n",
-       "      <td>0486</td>\n",
-       "      <td>BATTERY</td>\n",
-       "      <td>VIOLENT</td>\n",
-       "      <td>DOMESTIC BATTERY SIMPLE</td>\n",
-       "      <td>APARTMENT</td>\n",
+       "      <td>11553355</td>\n",
+       "      <td>CRIMINAL DAMAGE</td>\n",
+       "      <td>NON-VIOLENT</td>\n",
+       "      <td>CRIMINAL DEFACEMENT</td>\n",
+       "      <td>COMMERCIAL / BUSINESS OFFICE</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>08B</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>41.882224</td>\n",
-       "      <td>-87.766076</td>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>00:20:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>41.937637</td>\n",
+       "      <td>-87.688799</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North Center</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6931831</td>\n",
-       "      <td>12260669</td>\n",
-       "      <td>057XX S RACINE AVE</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>NARCOTICS</td>\n",
-       "      <td>NON-VIOLENT</td>\n",
-       "      <td>POSSESS - COCAINE</td>\n",
-       "      <td>STREET</td>\n",
-       "      <td>True</td>\n",
+       "      <td>11553003</td>\n",
+       "      <td>BATTERY</td>\n",
+       "      <td>VIOLENT</td>\n",
+       "      <td>AGGRAVATED: OTHER DANG WEAPON</td>\n",
+       "      <td>VEHICLE - OTHER RIDE SHARE SERVICE (E.G., UBER...</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>41.790069</td>\n",
-       "      <td>-87.654769</td>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>20:47:00</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>41.765004</td>\n",
+       "      <td>-87.625500</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>04:33:00</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Greater Grand Crossing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6931836</td>\n",
-       "      <td>25702</td>\n",
-       "      <td>068XX S STONY ISLAND AVE</td>\n",
-       "      <td>0110</td>\n",
-       "      <td>HOMICIDE</td>\n",
-       "      <td>VIOLENT</td>\n",
-       "      <td>FIRST DEGREE MURDER</td>\n",
+       "      <td>11553357</td>\n",
+       "      <td>OTHER OFFENSE</td>\n",
+       "      <td>NON-VIOLENT</td>\n",
+       "      <td>GUN OFFENDER: ANNUAL REGISTRATION</td>\n",
        "      <td>STREET</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
        "      <td>43.0</td>\n",
-       "      <td>01A</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>41.771062</td>\n",
-       "      <td>-87.586271</td>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>20:09:00</td>\n",
+       "      <td>41.758999</td>\n",
+       "      <td>-87.565468</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>17:27:00</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>South Shore</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     index        ID                     Block  IUCR Primary Type  \\\n",
-       "0  6909903  12260346     070XX S EGGLESTON AVE  0486      BATTERY   \n",
-       "1  6927701  12263464          080XX S YALE AVE  0820        THEFT   \n",
-       "2  6927790  12259990   056XX W WASHINGTON BLVD  0486      BATTERY   \n",
-       "3  6931831  12260669        057XX S RACINE AVE  2022    NARCOTICS   \n",
-       "4  6931836     25702  068XX S STONY ISLAND AVE  0110     HOMICIDE   \n",
+       "         ID         Primary_Type Violence_Status  \\\n",
+       "0  11555945  MOTOR VEHICLE THEFT     NON-VIOLENT   \n",
+       "1  11556016   DECEPTIVE PRACTICE     NON-VIOLENT   \n",
+       "2  11553355      CRIMINAL DAMAGE     NON-VIOLENT   \n",
+       "3  11553003              BATTERY         VIOLENT   \n",
+       "4  11553357        OTHER OFFENSE     NON-VIOLENT   \n",
        "\n",
-       "  Violence Status              Description Location Description  Arrest  \\\n",
-       "0         VIOLENT  DOMESTIC BATTERY SIMPLE            APARTMENT   False   \n",
-       "1     NON-VIOLENT           $500 AND UNDER            RESIDENCE   False   \n",
-       "2         VIOLENT  DOMESTIC BATTERY SIMPLE            APARTMENT   False   \n",
-       "3     NON-VIOLENT        POSSESS - COCAINE               STREET    True   \n",
-       "4         VIOLENT      FIRST DEGREE MURDER               STREET   False   \n",
+       "                           Description  \\\n",
+       "0                           AUTOMOBILE   \n",
+       "1  FINANCIAL IDENTITY THEFT OVER $ 300   \n",
+       "2                  CRIMINAL DEFACEMENT   \n",
+       "3        AGGRAVATED: OTHER DANG WEAPON   \n",
+       "4    GUN OFFENDER: ANNUAL REGISTRATION   \n",
        "\n",
-       "   Domestic  District  Ward  Community Area FBI Code  Year   Latitude  \\\n",
-       "0      True       7.0   6.0            68.0      08B  2021  41.766435   \n",
-       "1     False       6.0  17.0            44.0       06  2021  41.748474   \n",
-       "2      True      15.0  29.0            25.0      08B  2021  41.882224   \n",
-       "3     False       7.0  16.0            67.0       18  2021  41.790069   \n",
-       "4     False       3.0   5.0            43.0      01A  2021  41.771062   \n",
+       "                                Location_Description  Arrest  Community_Area  \\\n",
+       "0                                             STREET   False            61.0   \n",
+       "1  VEHICLE - OTHER RIDE SHARE SERVICE (E.G., UBER...   False             6.0   \n",
+       "2                       COMMERCIAL / BUSINESS OFFICE   False             5.0   \n",
+       "3  VEHICLE - OTHER RIDE SHARE SERVICE (E.G., UBER...   False            69.0   \n",
+       "4                                             STREET    True            43.0   \n",
        "\n",
-       "   Longitude       Date      Time  \n",
-       "0 -87.635964 2021-01-03  13:23:00  \n",
-       "1 -87.630607 2021-01-03  06:59:00  \n",
-       "2 -87.766076 2021-01-03  00:20:00  \n",
-       "3 -87.654769 2021-01-03  20:47:00  \n",
-       "4 -87.586271 2021-01-03  20:09:00  "
+       "    Latitude  Longitude        Date      Time  Average_Wind_Speed  \\\n",
+       "0  41.795512 -87.651271  2019-01-01  15:20:00                7.61   \n",
+       "1  41.942727 -87.640166  2019-01-01  02:00:00                7.61   \n",
+       "2  41.937637 -87.688799  2019-01-01  09:30:00                7.61   \n",
+       "3  41.765004 -87.625500  2019-01-01  04:33:00                7.61   \n",
+       "4  41.758999 -87.565468  2019-01-01  17:27:00                7.61   \n",
+       "\n",
+       "   Average_Temperature  Fog_Ice_Freezing_Fog  Thunder  Smoke_or_Haze  \\\n",
+       "0                 31.0                   1.0      NaN            NaN   \n",
+       "1                 31.0                   1.0      NaN            NaN   \n",
+       "2                 31.0                   1.0      NaN            NaN   \n",
+       "3                 31.0                   1.0      NaN            NaN   \n",
+       "4                 31.0                   1.0      NaN            NaN   \n",
+       "\n",
+       "           Community_Name  \n",
+       "0                New City  \n",
+       "1               Lake View  \n",
+       "2            North Center  \n",
+       "3  Greater Grand Crossing  \n",
+       "4             South Shore  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +210,7 @@
     "cnx = create_engine(f'postgresql://postgres:{db_password}@127.0.0.1:5432/chicago_crime').connect()\n",
     "\n",
     "# table named 'crime_data' will be returned as a dataframe.\n",
-    "df = pd.read_sql_table('crime_data', cnx)\n",
+    "df = pd.read_sql_table('chicago_crime_master', cnx)\n",
     "df.head()"
    ]
   },
