--- a/data/predictions.ipynb
+++ b/data/predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 52,
    "id": "88351b93",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 53,
    "id": "8aec8884",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "4               Riverdale  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 54,
    "id": "39784f71",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "4  1/1/19     NON-VIOLENT              54                   31"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
    "id": "a734290c",
    "metadata": {},
    "outputs": [
@@ -339,14 +339,12 @@
    ],
    "source": [
     "# correct column format\n",
-    "\n",
-    "\n",
     "print(df.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "id": "a1151b04",
    "metadata": {},
    "outputs": [
@@ -356,18 +354,19 @@
        "False"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# check for nulls\n",
     "df.isnull().values.any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 57,
    "id": "ba3d8289",
    "metadata": {},
    "outputs": [],
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "id": "f05cb5ba",
    "metadata": {},
    "outputs": [],
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "id": "dbe5a1d8",
    "metadata": {},
    "outputs": [],
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 60,
    "id": "5e964a40",
    "metadata": {},
    "outputs": [
@@ -559,7 +558,7 @@
        "[668177 rows x 5 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,11 +569,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 61,
    "id": "21f22828",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# genreate a column for each Year, month, weekday\n",
     "def wrangle(X):\n",
     "    X = X.copy()\n",
     "\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 62,
    "id": "64c52cda",
    "metadata": {},
    "outputs": [
@@ -714,29 +714,31 @@
        "[79696 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generate DF to determine crimes per day by community area\n",
     "crimes_per_day=df.groupby([\"Date\", \"Community_Area\"]).size().reset_index(name=\"Crimes_per_day\")\n",
     "crimes_per_day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 63,
    "id": "3720893a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge DF's to consolidate crimes per day within our working df.\n",
     "df=pd.merge(df, crimes_per_day, on=['Date', 'Community_Area'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 64,
    "id": "ea6927f8",
    "metadata": {},
    "outputs": [
@@ -952,7 +954,7 @@
        "[668177 rows x 10 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 65,
    "id": "e9320b5c",
    "metadata": {},
    "outputs": [
@@ -1155,12 +1157,13 @@
        "[668177 rows x 8 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# clean columns to date pertinent to predictions\n",
     "df = df[['Date','Community_Area', 'Average_Temperature',\n",
     "         'Year', 'Month', 'Day', 'Weekday', 'Crimes_per_day']]\n",
     "df = df.replace(np.nan,0)\n",
@@ -1169,67 +1172,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "6403cb9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = crimes_per_day.merge(df,on='Date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "f835b3b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 66,
    "id": "743ebdad",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate features from existing df\n",
     "features = df.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 67,
    "id": "97067124",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remove crimes per day column from features\n",
     "features.remove('Crimes_per_day')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 68,
    "id": "f6c58927",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remove year from features\n",
     "features.remove('Year')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 69,
    "id": "49579b76",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#remove date from features\n",
     "features.remove('Date')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 70,
    "id": "3d4a1655",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1226,7 @@
        "['Community_Area', 'Average_Temperature', 'Month', 'Day', 'Weekday']"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,26 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "39210303",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # split data for training and testing\n",
-    "# X = df\n",
-    "# X = pd.get_dummies(X)\n",
-    "\n",
-    "# y = df\n",
-    "# y = pd.get_dummies(Y)\n",
-    "# #Split the data into training and testing\n",
-    "# X_train,X_test,y_train,y_test = train_test_split(X,y, random_state=42)\n",
-    "\n",
-    "# X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 71,
    "id": "3428683f",
    "metadata": {},
    "outputs": [
@@ -1279,12 +1247,13 @@
        "((258152, 8), (410025, 8))"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# generate training and testing by splitting data by year\n",
     "train = df[df['Year'] < 2020]\n",
     "test = df[df['Year'] >= 2020]\n",
     "train.shape, test.shape"
@@ -1292,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 72,
    "id": "fcbe825c",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 73,
    "id": "7d956ea1",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1424,7 @@
        "[258152 rows x 5 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 74,
    "id": "6d69d141",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1456,7 @@
        "Name: Crimes_per_day, Length: 410025, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 75,
    "id": "4beef626",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1477,7 @@
        "['Community_Area', 'Average_Temperature', 'Month', 'Day', 'Weekday']"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 76,
    "id": "10f21391",
    "metadata": {},
    "outputs": [
@@ -1533,6 +1502,7 @@
     }
    ],
    "source": [
+    "# generate baseline for machine learning \n",
     "guess = df['Crimes_per_day'].mean()\n",
     "errors = guess - df['Crimes_per_day']\n",
     "mean_absolute_error = errors.abs().mean()\n",
@@ -1542,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 77,
    "id": "1295e45d",
    "metadata": {},
    "outputs": [
@@ -1564,22 +1534,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 30,
    "id": "39838a46",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rename training data\n",
     "X = X_train\n",
     "y = y_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 33,
    "id": "158fac5d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import librarys for ML\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn import datasets, svm\n",
     "from sklearn.svm import SVC\n",
@@ -1588,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 34,
    "id": "43dbc691",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1572,7 @@
        "                                       random_state=42))])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 35,
    "id": "f27be845",
    "metadata": {},
    "outputs": [],
@@ -1650,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 36,
    "id": "23b97fad",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 37,
    "id": "26c7b6fe",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "id": "54cf0980",
    "metadata": {},
    "outputs": [
@@ -1713,7 +1685,7 @@
        "Name: Crimes_per_day, dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1724,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "id": "148fec96",
    "metadata": {},
    "outputs": [
@@ -1734,7 +1706,7 @@
        "'9'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
