--- a/data/predictions.ipynb
+++ b/data/predictions.ipynb
@@ -1744,9 +1744,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('mlenv': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3711jvsc74a57bd098f13715fa9b17b84b00364d3ccb393cb4a92ea48adb4d40a7afccff289b2c80"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1758,7 +1758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
