updated predictions notebook to include SQL connection

--- a/data/predictions.ipynb
+++ b/data/predictions.ipynb
@@ -214,7 +214,15 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('crime.csv')\n",
+    "# import the modules\n",
+    "from config import db_password\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# SQLAlchemy connectable\n",
+    "cnx = create_engine(f'postgresql://postgres:{db_password}@127.0.0.1:5432/chicago_crime').connect()\n",
+    "\n",
+    "# table named 'crime_data' will be returned as a dataframe.\n",
+    "df = pd.read_sql_table('chicago_crime_master', cnx)\n",
     "df.head()"
    ]
   },
